@@ -728,6 +728,10 @@ selects `merge'.
 See \fBInput File Combining\fR above for a description of the different
 combining methods.
 .TP
+.B \-\-magic
+If SoX has been built with the optional `libmagic' library, then this
+option can be given to enable its use in helping to detect audio file types.
+.TP
 \fB\-D\fR, \fB\-\-no\-dither\fR
 SoX, by default, automatically invokes the dither effect (with TPDF) when reducing
 bit-depth.  This option can be given to prevent this behaviour.
